tempfile/async-stream/tests/ui/unsoundness_issue_106.stderr
error[E0767]: use of unreachable label `'__async_stream_private_check_scope`
  --> tests/ui/unsoundness_issue_106.rs:14:10
   |
14 |       pin!(stream! {
   |  __________^
15 | |         let yield_42 = asynk!(yield 42_usize);
16 | |         let s = stream! {
17 | |             yield Box::new(12345);
...  |
26 | |         }
27 | |     })
   | |     ^
   | |     |
   | |_____unreachable label `'__async_stream_private_check_scope`
   |       unreachable label defined here
   |
   = note: labels are unreachable through functions, closures, async blocks and modules
   = note: this error originates in the macro `$crate::__private::stream_inner` which comes from the expansion of the macro `stream` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0267]: `break` inside `async` block
  --> tests/ui/unsoundness_issue_106.rs:14:10
   |
8  |           async { $e }
   |           ----- enclosing `async` block
...
14 |       pin!(stream! {
   |  __________^
15 | |         let yield_42 = asynk!(yield 42_usize);
16 | |         let s = stream! {
17 | |             yield Box::new(12345);
...  |
26 | |         }
27 | |     })
   | |_____^ cannot `break` inside `async` block
   |
   = note: this error originates in the macro `$crate::__private::stream_inner` which comes from the expansion of the macro `stream` (in Nightly builds, run with -Z macro-backtrace for more info)
